--- a/content/resources/6-090iap05-th.md
+++ b/content/resources/6-090iap05-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-iap-2005/149d4cbfe919084b7214652e67eb40bb_6-090iap05-th.jpg
+file: /courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-iap-2005/149d4cbfe919084b7214652e67eb40bb_6-090iap05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: MIT/GNU Scheme Logo. (Image courtesy of Harold Abelson and Gerald Sussman.)
@@ -13,4 +13,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 6-090iap05-th.jpg
 uid: 149d4cbf-e919-084b-7214-652e67eb40bb
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+New image Upload
+
