--- a/content/resources/6-090iap05.md
+++ b/content/resources/6-090iap05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: MIT/GNU Scheme Logo. (Image courtesy of Harold Abelson and Gerald Sussman.)
-file: /media/courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-iap-2005/e967432d137015cbf51f77ceece93dfa_6-090iap05.jpg
+file: /courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-iap-2005/e967432d137015cbf51f77ceece93dfa_6-090iap05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: MIT/GNU Scheme Logo. (Image courtesy of Harold Abelson and Gerald Sussman.)
@@ -13,4 +13,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 6-090iap05.jpg
 uid: e967432d-1370-15cb-f51f-77ceece93dfa
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+MIT/GNU Scheme Logo. (Image courtesy of Harold Abelson and Gerald Sussman.)
+
