--- a/content/resources/6001mac.md
+++ b/content/resources/6001mac.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 6001mac (TEX) contains macros that produce the look-and-feel of the handouts.
-file: /media/courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-iap-2005/25939a1d6ff42c84d8ce9f76f29384ad_6001mac.tex
+file: /courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-iap-2005/25939a1d6ff42c84d8ce9f76f29384ad_6001mac.tex
 file_type: text/plain
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: 6001mac.tex
 uid: 25939a1d-6ff4-2c84-d8ce-9f76f29384ad
 ---
+6001mac (TEX) contains macros that produce the look-and-feel of the handouts.
+
