--- a/content/resources/6001mac.md
+++ b/content/resources/6001mac.md
@@ -5,6 +5,7 @@ file: /courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-
 file_type: text/plain
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: 6001mac.tex
 uid: 25939a1d-6ff4-2c84-d8ce-9f76f29384ad
 ---
 6001mac (TEX) contains macros that produce the look-and-feel of the handouts.
-
