--- a/content/resources/6-090iap05-th.md
+++ b/content/resources/6-090iap05-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-iap-2005/149d4cbfe919084b7214652e67eb40bb_6-090iap05-th.jpg
+file_size: 14351
 file_type: image/jpeg
 image_metadata:
   caption: MIT/GNU Scheme Logo. (Image courtesy of Harold Abelson and Gerald Sussman.)
