--- a/content/resources/6-090iap05.md
+++ b/content/resources/6-090iap05.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: MIT/GNU Scheme Logo. (Image courtesy of Harold Abelson and Gerald Sussman.)
 file: /courses/6-090-building-programming-experience-a-lead-in-to-6-001-january-iap-2005/e967432d137015cbf51f77ceece93dfa_6-090iap05.jpg
+file_size: 141969
 file_type: image/jpeg
 image_metadata:
   caption: MIT/GNU Scheme Logo. (Image courtesy of Harold Abelson and Gerald Sussman.)
